[package]
name = "survey-manager"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
domain_patterns = "0.1.9"
domain_derive = "0.1.95"
uuid = { version = "0.7.4", features = ["v4"] }
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.9"
