[package]
name = "survey-manager-domain"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
survey-manager-commands = { path = "../domain-commands" }
domain_patterns = "0.2.1"
domain_derive = "0.2.13"
uuid = { version = "0.7.4", features = ["v4"] }
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.9"
jsonwebtoken = "6.0.1"
failure = "0.1.5"
