[package]
name = "survey-manager-api"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
domain_patterns = "0.2.141"
domain_derive = "0.2.135"
survey-manager-core = { path = "../survey-manager-core" }
survey-manager-infra = { path = "../survey-manager-infra" }
uuid = { version = "0.7.4", features = ["v4"] }
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.9"
jsonwebtoken = "6.0.1"
mysql = "16.1.0"
actix-web = "1.0.7"
futures = "0.1.29"
dotenv = "0.14.1"
derive_more = "0.15.0"
env_logger = "0.6.2"
log = "0.4.8"
r2d2_redis = "0.11.0"
r2d2 = "0.8.5"
redis = "0.12.0"
lazy_static = "1.4.0"
