[package]
name = "survey-manager-core"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
domain_patterns = "0.2.134"
domain_derive = "0.2.131"
uuid = { version = "0.7.4", features = ["v4"] }
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.9"
jsonwebtoken = "6.0.1"
snafu = "0.5.0"
