[package]
name = "survey-manager-infra"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
domain_patterns = "0.2.141"
domain_derive = "0.2.135"
survey-manager-core = { path = "../survey-manager-core" }
mysql = "16.1.0"
r2d2 = "0.8.5"
r2d2_mysql = "16.0.0"
snafu = "0.5.0"
serde = "1.0.100"
serde_json = "1.0.40"
redis = "0.12.0"
r2d2_redis = "0.11.0"

[dev-dependencies]
dotenv = "0.14.1"
